# blast-align-tree

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  bat-environment-ARMorIintel-mac.yml  bat-flowchart.pptx  blast-align-tree.py  blast-align-tree.sh  blast_align_tree.py  blastp-align-tree.sh  gene_symbols.txt  genome_selector.py  install_r_deps.R  kinase.hmm  kinase.hmm.h3f  kinase.hmm.h3i  kinase.hmm.h3m  kinase.hmm.h3p  pip_plan.md  psiblast-align-tree.sh  pyproject.toml  tblastn-align-tree.py  tblastn-align-tree.sh  visualize-tree.r  visualize-tree2.r  visualize_tree.r
AT4G33430.1/: AT4G33430.1.Pvul218cds.fa.coding.txt  AT4G33430.1.Pvul218cds.fa.seq.tblastn  AT4G33430.1.Pvul218cds.fa.seq.tblastn.blastdb.fa  AT4G33430.1.Pvul218cds.fa.seq.tblastn.blastdb.fa.parse.fa  AT4G33430.1.Pvul218cds.fa.seq.tblastn.blastdb.stop.fa  AT4G33430.1.Pvul218cds.fa.seq.tblastn.blastdb.translate.fa  AT4G33430.1.Pvul218cds.fa.seq.tblastn.blastdb.translate.fa.parse.fa  AT4G33430.1.Pvul218cds.fa.seq.tblastn.full  AT4G33430.1.TAIR10cds.fa.coding.txt  AT4G33430.1.TAIR10cds.fa.seq.tblastn  AT4G33430.1.TAIR10cds.fa.seq.tblastn.blastdb.fa  AT4G33430.1.TAIR10cds.fa.seq.tblastn.blastdb.fa.parse.fa  AT4G33430.1.TAIR10cds.fa.seq.tblastn.blastdb.stop.fa  AT4G33430.1.TAIR10cds.fa.seq.tblastn.blastdb.translate.fa  AT4G33430.1.TAIR10cds.fa.seq.tblastn.blastdb.translate.fa.coding.txt  AT4G33430.1.TAIR10cds.fa.seq.tblastn.blastdb.translate.fa.parse.fa  AT4G33430.1.TAIR10cds.fa.seq.tblastn.full  AT4G33430.1.Vung469cds.fa.coding.txt  AT4G33430.1.Vung469cds.fa.seq.tblastn  (+18 more)
(+236 files in other folders)
